Fix movie poll sorting. Fix actor list scrollbar visibility.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -212,6 +212,9 @@ div.dialog-content {
 }
 
 .cast {
+  overflow-x: auto;
+  overflow-y: hidden;
+
   &-member {
     min-width: 76px;
     line-height: 1em;
@@ -432,8 +435,8 @@ $poster-base-unit: min(95vw, 472px);
   }
 
   .watch-provider-image {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
   }
 
   .text {
@@ -467,8 +470,8 @@ $poster-base-unit: min(95vw, 472px);
 }
 
 .watch-provider-image {
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
   border-radius: 7px;
   background-size: contain;
 }
